--- a/index.html
+++ b/index.html
@@ -33,37 +33,44 @@
     Knowledge is Power
   </marquee>
   <div class="row">
+    <!-- Top International News from UN, BBC & Reuters -->
+    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://www.un.org/en/" target="_blank">The United Nations</a></div>
+    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://www.bbc.com/news" target="_blank">BBC News</a></div>
+    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://in.reuters.com/" target="_blank">The Reuters India</a></div>
+    <!-- Most Popular News National Levels -->
     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://timesofindia.indiatimes.com/" target="_blank">The Times of India</a></div>
     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://www.newindianexpress.com/" target="_blank">The New Indian Express</a></div>
     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://www.thestatesman.com/" target="_blank">The Statesman</a></div>
     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://www.asianage.com/" target="_blank">The Asian Age</a></div>
-    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://www.thehindu.com/" target="_blank">The Hindu</a></div>
     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://news.google.com/topstories?hl=en-IN&gl=IN&ceid=IN:en" target="_blank">Google News</a></div>
-    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://www.ndtv.com/" target="_blank">NDTV News</a></div>
-    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://www.un.org/en/" target="_blank">The United Nations</a></div>
-    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="http://www.ddinews.gov.in/" target="_blank">DD News</a></div>
-    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://economictimes.indiatimes.com/" target="_blank">The Economic Times</a></div>
-    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://www.financialexpress.com/" target="_blank">The Financial Express</a></div>
-    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://www.youtube.com/user/rajyasabhatv" target="_blank">RajyaSabha TV News You Tube</a></div>
-    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="http://sunnewslive.in/" target="_blank">Sun News Tamil Live</a></div>
-    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://www.dailythanthi.com/Districts/kanyakumari" target="_blank">Dina Thanthi Tamil</a></div>
-    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://in.reuters.com/" target="_blank">The Reuters India</a></div>
-    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://www.bbc.com/news" target="_blank">BBC News</a></div>
-    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://www.cgtn.com/" target="_blank">CGTN China</a></div>
-    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://edition.cnn.com/?hpt=header_edition-picker" target="_blank">CNN</a></div>
-    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://www.aninews.in/" target="_blank">ANI News Agency</a></div>
     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://news.yahoo.com/" target="_blank">Yahoo News</a></div>
+    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://www.ndtv.com/" target="_blank">NDTV News</a></div>
+    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://www.thehindu.com/" target="_blank">The Hindu</a></div>
+    <!-- News Agencies Original News -->
+    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://www.aninews.in/" target="_blank">ANI News Agency</a></div>
     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="http://www.ptinews.com/" target="_blank">PTI News Agency</a></div>
+    <!-- US, China & Pakistan -->
+    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://edition.cnn.com/?hpt=header_edition-picker" target="_blank">CNN</a></div>
+    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://www.cgtn.com/" target="_blank">CGTN China</a></div>
     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://www.dawn.com/" target="_blank">Dawn Pakistan</a></div>
+    <!-- Governtment of India Agencies -->
+    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://www.youtube.com/user/rajyasabhatv" target="_blank">RajyaSabha TV News You Tube</a></div>
+    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="http://www.ddinews.gov.in/" target="_blank">DD News</a></div>
     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://www.pib.gov.in/" target="_blank">Press Information Bureau (PIB)</a></div>
     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="http://newsonair.com/" target="_blank">All India Radio News</a></div>
+    <!-- Economic News -->
+    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://economictimes.indiatimes.com/" target="_blank">The Economic Times</a></div>
+    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://www.financialexpress.com/" target="_blank">The Financial Express</a></div>
+    <!-- Local Tamil News -->
+    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://www.dailythanthi.com/Districts/kanyakumari" target="_blank">Dina Thanthi Tamil</a></div>
+    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="http://sunnewslive.in/" target="_blank">Sun News Tamil Live</a></div>
   </div>
   <marquee behavior="alternate">
     Knowledge is Power
   </marquee>
   <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-      <h2>Keep Updated</h2>
+      <h2><a href="editorials.html">Editorials & Opinions</a></h2>
     </div>
   </div>
 
