--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     a:hover {
       color: hotpink;
     }
+
   </style>
 </head>
 
@@ -71,6 +72,9 @@
   <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
       <h2><a href="editorials.html">Editorials & Opinions</a></h2>
+    </div>
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+      <h2><a href="Very Short News.html">Video News</a></h2>
     </div>
   </div>
 
