--- a/Very Short News.html
+++ b/Very Short News.html
@@ -11,45 +11,13 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
   <title>News International</title>
-  <style media="screen">
-  a {
-    color: white;
-    text-decoration: none;
-  }
 
-  a:hover {
-    color: hotpink;
-  }
-      body {
-        background: aqua;
-      }
 
-      @media screen and (min-width:576px) {
-        body {
-          background: red;
-        }
-
-        @media screen and (min-width:768px) {
-          body {
-            background: blue;
-          }
-
-          @media screen and (min-width:992px) {
-            body {
-              background: green;
-            }
-
-            @media screen and (min-width:1200px) {
-              body {
-                background: yellow;
-              }
-    </style>
-    
 </head>
 
 <body>
 <!-- container -->
-<div class="container">
+<div class="container bg-white">
 
   <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
