--- a/editorials.html
+++ b/editorials.html
@@ -11,45 +11,13 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
   <title>News International</title>
-  <style media="screen">
-  a {
-    color: white;
-    text-decoration: none;
-  }
 
-  a:hover {
-    color: hotpink;
-  }
-      body {
-        background: aqua;
-      }
-
-      @media screen and (min-width:576px) {
-        body {
-          background: red;
-        }
-
-        @media screen and (min-width:768px) {
-          body {
-            background: blue;
-          }
-
-          @media screen and (min-width:992px) {
-            body {
-              background: green;
-            }
-
-            @media screen and (min-width:1200px) {
-              body {
-                background: yellow;
-              }
-    </style>
 
 </head>
 
 <body>
 <!-- container -->
-<div class="container">
+<div class="container bg-white">
 
   <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
@@ -60,27 +28,30 @@
     Knowledge is Power
   </marquee>
   <div class="row">
-    <!-- Top Editorials & Opinions National Level -->
-    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://timesofindia.indiatimes.com/blogs/?utm_source=TOInewHP_TILwidget&utm_medium=NavLi&utm_campaign=TOInewHP" target="_blank">The Times of India</a></div>
-    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://www.newindianexpress.com/Opinions" target="_blank">The New Indian Express</a></div>
-    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://www.thestatesman.com/opinion" target="_blank">The Statesman</a></div>
-    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://www.asianage.com/opinion" target="_blank">The Asian Age</a></div>
-    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://www.ndtv.com/opinion?pfrom=home-mainnavgation" target="_blank">NDTV News</a></div>
-    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://economictimes.indiatimes.com/opinion" target="_blank">The Economic Times</a></div>
-    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://www.financialexpress.com/economy/" target="_blank">The Financial Express</a></div>
-    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://www.thehindu.com/opinion/lead/" target="_blank">The Hindu</a></div>
-    <!-- Top International Opinions -->
-    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://in.reuters.com/breakingviews" target="_blank">The Reuters India</a></div>
-    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://www.bbc.com/news/stories" target="_blank">BBC News</a></div>
-    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://edition.cnn.com/opinions" target="_blank">CNN</a></div>
-    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://www.cgtn.com/opinions" target="_blank">CGTN China</a></div>
-    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://www.dawn.com/opinion" target="_blank">Dawn Pakistan</a></div>
-    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://news.yahoo.com/tagged/360/" target="_blank">Yahoo News</a></div>
-    <!-- Government of India Opinions -->
-    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="http://newsonair.com/" target="_blank">All India Radio News</a></div>
-    <!-- Local Tamil Opinion -->
-    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://www.dailythanthi.com/News/Sirappukatturaigal" target="_blank">Dina Thanthi Tamil</a></div>
-  </div>
+      <!-- Top Editorials & Opinions National Level -->
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://timesofindia.indiatimes.com/blogs/?utm_source=TOInewHP_TILwidget&utm_medium=NavLi&utm_campaign=TOInewHP" target="_blank">The Times of India</a></div>
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://indianexpress.com/section/opinion/" target="_blank">The Indian Express</a></div>
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://www.newindianexpress.com/Opinions" target="_blank">The New Indian Express</a></div>
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://www.thestatesman.com/opinion" target="_blank">The Statesman</a></div>
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://www.asianage.com/opinion" target="_blank">The Asian Age</a></div>
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://www.ndtv.com/opinion?pfrom=home-mainnavgation" target="_blank">NDTV News</a></div>
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://economictimes.indiatimes.com/opinion" target="_blank">The Economic Times</a></div>
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://www.financialexpress.com/economy/" target="_blank">The Financial Express</a></div>
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://www.thehindu.com/opinion/lead/" target="_blank">The Hindu</a></div>
+      <!-- Top International Opinions -->
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://in.reuters.com/breakingviews" target="_blank">The Reuters India</a></div>
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://www.bbc.com/news/stories" target="_blank">BBC News</a></div>
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://edition.cnn.com/opinions" target="_blank">CNN</a></div>
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://www.cgtn.com/opinions" target="_blank">CGTN China</a></div>
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://www.dawn.com/opinion" target="_blank">Dawn Pakistan</a></div>
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://news.yahoo.com/tagged/360/" target="_blank">Yahoo News</a></div>
+      <!-- Government of India Opinions -->
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="http://newsonair.com/" target="_blank">All India Radio News</a></div>
+      <!-- Local Tamil Opinion -->
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://www.dailythanthi.com/News/Sirappukatturaigal" target="_blank">Dina Thanthi Tamil</a></div>
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://www.dinamani.com/editorial" target="_blank">Dinamani Tamil</a></div>
+    </div>
+
   <marquee behavior="alternate">
     Knowledge is Power
   </marquee>
