--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
       <button type="button" class="btn btn-block btn-outline-danger"><a href="http://en.people.cn/" class="text-white" target="_blank">People's Daily China</a></button>
       <button type="button" class="btn btn-block btn-outline-warning"><a href="https://www.themoscowtimes.com/" class="text-white" target="_blank">The Moscow Times Russia</a></button>
       <button type="button" class="btn btn-block btn-outline-info"><a href="https://www3.nhk.or.jp/nhkworld/en/news/" class="text-white" target="_blank">NHK Japan</a></button>
+      <button type="button" class="btn btn-block btn-outline-info"><a href="https://www.japantimes.co.jp/" class="text-white" target="_blank">Japan Times</a></button>
       <button type="button" class="btn btn-block btn-outline-light"><a href="https://news.sky.com/" class="text-white" target="_blank">Sky News</a></button>
       <button type="button" class="btn btn-block btn-outline-dark"><a href="https://www.dawn.com/" class="text-white" target="_blank">Dawn Pakistan</a></button>
       <button type="button" class="btn btn-block btn-outline-secondary"><a href="https://asiatimes.com/" class="text-white" target="_blank">Asia Times, Hong Kong</a></button>
