--- a/editorials.html
+++ b/editorials.html
@@ -43,6 +43,7 @@
       <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://www.bbc.com/news/stories" target="_blank">BBC News</a></div>
       <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://edition.cnn.com/opinions" target="_blank">CNN</a></div>
       <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://www.cgtn.com/opinions" target="_blank">CGTN China</a></div>
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://www.japantimes.co.jp/opinion/" target="_blank">Japan Times</a></div>
       <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://www.dawn.com/opinion" target="_blank">Dawn Pakistan</a></div>
       <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3"><a href="https://news.yahoo.com/tagged/360/" target="_blank">Yahoo News</a></div>
       <!-- Government of India Opinions -->
