--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       <button type="button" class="btn btn-block btn-outline-info"><a href="https://timesofindia.indiatimes.com/" class="text-white" target="_blank">The Times of India</a></button>
       <button type="button" class="btn btn-block btn-outline-light"><a href="https://indianexpress.com/" class="text-white" target="_blank">The Indian Express</a></button>
       <button type="button" class="btn btn-block btn-outline-dark"><a href="https://www.ndtv.com/" class="text-white" target="_blank">NDTV News</a></button>
+      <button type="button" class="btn btn-block btn-outline-danger"><a href="https://www.republicworld.com/" class="text-white" target="_blank">Republic World</a></button>
       <button type="button" class="btn btn-block btn-outline-primary"><a href="https://www.youtube.com/user/rajyasabhatv" class="text-white" target="_blank">RajyaSabha TV News You Tube</a></button>
       <button type="button" class="btn btn-block btn-outline-secondary"><a href="https://www.dailythanthi.com/Districts/kanyakumari" class="text-white" target="_blank">Dina Thanthi Tamil</a></button>
       <!-- Most Popular News National Levels -->
