--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
       <button type="button" class="btn btn-block btn-outline-primary"><a href="https://edition.cnn.com/?hpt=header_edition-picker" class="text-white" target="_blank">CNN</a></button>
       <button type="button" class="btn btn-block btn-outline-success"><a href="https://www.cgtn.com/" class="text-white" target="_blank">CGTN China</a></button>
       <button type="button" class="btn btn-block btn-outline-danger"><a href="http://en.people.cn/" class="text-white" target="_blank">People's Daily China</a></button>
+      <button type="button" class="btn btn-block btn-outline-dark"><a href="https://www.aljazeera.com/" class="text-white" target="_blank">Al Jazeera UAE</a></button>
       <button type="button" class="btn btn-block btn-outline-warning"><a href="https://www.themoscowtimes.com/" class="text-white" target="_blank">The Moscow Times Russia</a></button>
       <button type="button" class="btn btn-block btn-outline-info"><a href="https://www3.nhk.or.jp/nhkworld/en/news/" class="text-white" target="_blank">NHK Japan</a></button>
       <button type="button" class="btn btn-block btn-outline-info"><a href="https://www.japantimes.co.jp/" class="text-white" target="_blank">Japan Times</a></button>
