--- a/index.html
+++ b/index.html
@@ -86,6 +86,17 @@
       <button type="button" class="btn btn-block btn-outline-primary"><a href="https://www.dailythanthi.com/Districts/kanyakumari" class="text-white" target="_blank">Dina Thanthi Tamil</a></button>
       <button type="button" class="btn btn-block btn-outline-success"><a href="https://www.dinamani.com/" class="text-white" target="_blank">Dinamani Tamil</a></button>
       <button type="button" class="btn btn-block btn-outline-danger"><a href="http://sunnewslive.in/" class="text-white" target="_blank">Sun News Tamil Live</a></button>
+    
+    <!-- SriLanka NewsPapers -->
+      <h4>SriLanka NewsPapers</h4>
+      <button type="button" class="btn btn-block btn-outline-primary"><a href="https://www.dailymirror.lk/" class="text-white" target="_blank">Daily Mirror</a></button>
+      <button type="button" class="btn btn-block btn-outline-success"><a href="https://dailynews.lk/" class="text-white" target="_blank">Daily News</a></button>
+      <button type="button" class="btn btn-block btn-outline-danger"><a href="https://www.ft.lk/" class="text-white" target="_blank">Daily FT</a></button>
+      <button type="button" class="btn btn-block btn-outline-warning"><a href="https://www.sundaytimes.lk/" class="text-white" target="_blank">Sunday Times</a></button>
+      <button type="button" class="btn btn-block btn-outline-primary"><a href="https://island.lk/" class="text-white" target="_blank">The Island</a></button>
+      <button type="button" class="btn btn-block btn-outline-success"><a href="https://www.nation.lk/online/" class="text-white" target="_blank">The Nation</a></button>
+      <button type="button" class="btn btn-block btn-outline-danger"><a href="https://www.thinakaran.lk/" class="text-white" target="_blank">Thinakaran Tamil</a></button>
+      <button type="button" class="btn btn-block btn-outline-warning"><a href="https://www.virakesari.lk/" class="text-white" target="_blank">Virakesari</a></button>
 
   <marquee behavior="alternate">
     Knowledge is Power
