--- a/index.html
+++ b/index.html
@@ -97,6 +97,8 @@
       <button type="button" class="btn btn-block btn-outline-success"><a href="https://www.nation.lk/online/" class="text-white" target="_blank">The Nation</a></button>
       <button type="button" class="btn btn-block btn-outline-danger"><a href="https://www.thinakaran.lk/" class="text-white" target="_blank">Thinakaran Tamil</a></button>
       <button type="button" class="btn btn-block btn-outline-warning"><a href="https://www.virakesari.lk/" class="text-white" target="_blank">Virakesari</a></button>
+      <button type="button" class="btn btn-block btn-outline-success"><a href="https://media.gov.lk/" class="text-white" target="_blank">Government of SriLanka</a></button>
+      <button type="button" class="btn btn-block btn-outline-primary"><a href="https://www.news.lk/" class="text-white" target="_blank">SriLanka Government News</a></button>
 
   <marquee behavior="alternate">
     Knowledge is Power
